--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
-    <script src="lib/blazor.webassembly.js"></script>
+    <script src="PatronesUXBlazorahorasi/lib/blazor.webassembly.js"></script>
 </body>
 
 </html>
